RESOLVED FIXED239980
[Quirks] REGRESSION (r286874): Menu is Cut Off After Pressing Search Icon on Hotels.com
https://bugs.webkit.org/show_bug.cgi?id=239980
Summary [Quirks] REGRESSION (r286874): Menu is Cut Off After Pressing Search Icon on ...
alan
Reported 2022-05-02 13:23:26 PDT
Attachments
Patch (2.94 KB, patch)
2022-05-02 13:28 PDT, alan
no flags
Patch (2.96 KB, patch)
2022-05-02 14:24 PDT, alan
no flags
alan
Comment 1 2022-05-02 13:28:25 PDT
Simon Fraser (smfr)
Comment 2 2022-05-02 14:11:06 PDT
Comment on attachment 458703 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=458703&action=review > Source/WebCore/ChangeLog:9 > + Disable resolution media on www.hotels.com. media query > Source/WebCore/page/Quirks.h:84 > + bool shouldDisableResolutionMedia() const; shouldDisableResolutionMediaQuery
alan
Comment 3 2022-05-02 14:24:45 PDT
EWS
Comment 4 2022-05-02 16:34:15 PDT
Committed r293700 (250191@main): <https://commits.webkit.org/250191@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458706 [details].
Note You need to log in before you can comment on or make changes to this bug.