[Quirks] REGRESSION (r286874): Menu is Cut Off After Pressing Search Icon on Hotels.com https://bugs.webkit.org/show_bug.cgi?id=239980 <rdar://91992835>

Reviewed by Simon Fraser.

Disable resolution media query on www.hotels.com.

* css/MediaQueryEvaluator.cpp:
(WebCore::resolutionEvaluate):
* page/Quirks.cpp:
(WebCore::Quirks::shouldUseResolutionMedia const):
* page/Quirks.h:

Canonical link: https://commits.webkit.org/250191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293700 268f45cc-cd09-0410-ab3c-d52691b4dbfc